<resources>
    <string name="app_name">Zero Cross Tic Tac Toe</string>
    <string name="action_about">About</string>
     <string name="about_d"> Tic Tac Toe or alternately called Xs and Os \n
         is game for two players, X and O, who take turns marking the spaces in a 3×3 grid.
         The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Enter Names and get started</string>
    <string name="title_activity_splash">Splash</string>
    <string name="action_rateus">Rate this App</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_help">help</string>
    <string name="ad_unit_ins">ca-app-pub-1615457502948469/6796212031</string>
    <string name="ad_unit_banner">ca-app-pub-1615457502948469/5319478834 </string>
    <string name="action_contactus">contact us</string>
    <string name="statistics">statistics</string>
</resources>
